[project]
name = "cardvisionpy"
description = "Apple Card transaction screenshot parser"
version = "1.0.0"
authors = [
    { name = "Alex Wolfe" }
]

dependencies = [
    "pillow ~= 9.2.0",
    "pytesseract ~= 0.3.9",
    "opencv-python ~= 4.6.0.66",
    "dateparser ~= 1.1.1"
]

requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61"] 
build-backend = "setuptools.build_meta"